--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
       }
     </style>
   </head>
+  <body onload="scraper()"></body>
   <body>
     <div id="wrapper">
       <h1>Note Scraper</h1>
@@ -46,5 +47,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
+    
   </body>
 </html>
