--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Scraping With Mongoose</title>
+    <title>Scraper</title>
     <style>
       body { background-color: whitesmoke; }
       #wrapper {
@@ -41,7 +41,7 @@
   <body onload="scraper()"></body>
   <body>
     <div id="wrapper">
-      <h1>Note Scraper</h1>
+      <h1>Tech News Breifing</h1>
       <div id="articles"></div>
       <div id="notes"></div>
     </div>
